src/client/app/styles/main.css
/* ... */
.update-profile-sm-buttons {
  float: right !important;
}


@media (max-width: 460px) {
  .seller-stock-formatting input[type="radio"] {
    margin-left: 5px !important;
    text-align: left !important;
  }
}

/*NAV BAR RESPONSIVENESS*/

@media (max-width: 1100px) and (min-width: 1001px) {
  .beLocal-search {
    width: 495px !important;
  }
}

@media (max-width: 768px) {
  .header-container {
    padding-left: 5px;
    padding-right: 5px;
    text-align: center !important;
    float: none !important;
  }

  .search-nav-xs {
    width: 55% !important;
    float: left;
  }

  .navbar-toggle {
    margin-right: 5px;
    margin-left: 5px;
    margin-bottom: 0px !important;
  }
}

@media (max-width: 1000px) {
  .beLocal-search {
    width: 350px !important;
  }

  .logo-header {
    margin-top: -90px;
  }

  .logo-header img {
    width: 250px !important;
  }
}

/* END OF NAV BAR RESPONSIVENESS*/

.no-block {
  display: inline !important;
}

.search-nav-xs {
  width: 495px;
  margin-bottom: 0px !important;
}

.navbar-xs {
  height: auto !important;
  border-bottom: 3px solid #78be25 !important;
}

.navbar-brand {
  padding-top: 5px !important;
  padding-left: 5px !important;
  padding-bottom: 0px !important;
  padding-right: 5px;
}

.longDesciption {
  display: -webkit-box;
}

.navbar-brand img {
  height: 35px;
}

@media (max-width: 325px) {
    .full-logo {
        display: none !important;
    }
}

@media (min-width: 326px) {
    .small-logo {
        display: none !important;
    }
}

.beLocal-search {
  width: 600px;
}

.header-container {
  max-width: 1350px;
  margin-left: auto;
  margin-right: auto;
}

.hr-description-style {
  font-size: 16px;
  display: inline-block;
  font-family: 'Roboto', sans-serif;
  color: #9c9795;
  padding-top: 7px;
}

.customer-container {
  margin-left: auto;
  margin-right: auto;
  max-width: 1300px;
  padding-left: 15px;
  padding-right: 15px;
  padding-top: 30px;
  padding-bottom: 35px;
}

.tag-formatting {
  margin-top: 0px !important;
  margin-bottom: 0px !important;
}

@media (max-width: 768px) {
  .customer-container {
    padding-top: 60px !important;
  }
}

.nav-shadow {
  text-shadow: 0px 0px 5px #CFF4BF;
}

.customer-nav .active {
  color: white !important;
/*  text-decoration: underline;
  -moz-text-decoration-color: #403E3B;
  text-decoration-color: #403E3B;*/
}

.customer-nav li a:hover {
  color: #252422 !important;
  text-decoration: none;
}

.customer-nav .active > a:hover {
  color: #1a1918 !important;
}
 
.customer-nav .active > a {
  color: #1a1918 !important;
}

.navbar {
  background-color: #FFFFFF !important;
  height: 140px;
  -webkit-box-shadow: 0 1px 1px 0 rgba(0,0,0,0.3) !important;
}



.nav-bar-top {
  padding-bottom: 50px;
  padding-right: 10px;
}

.logo-header {
  margin-top: -100px;
}

.logo-header img {
  width: 300px;
}

.customer-nav {
  height: 50px;
  background-color: #78be25 !important;
}

.logo-green {
  color: #78be25 !important;
}

.first-modal-row {
  margin-bottom: 15px;
}

.medium-margin {
  margin-left: 10px;
}

.header-font {
  font-family: "Roboto","Helvetica Neue",Helvetica,Arial,sans-serif;
}

.modal-title {
  font-family: 'Libre Baskerville', serif;
  font-weight: bold;
}

.modal-title > small {
  font-family: 'Roboto', sans-serif !important;
}

.small-header {
  font-family: 'Roboto', sans-serif !important;
  color: #403E3B;
  font-size: 12px;
  letter-spacing: 1px;
  text-transform: uppercase;
  padding: 0px;
  margin-bottom: 10px;
}

.edit-location-modal-header {
  border-bottom: 0px;
  padding-bottom: 0px;
}

.plain-text-font {
  font-family: 'Roboto', sans-serif !important;
}

.center {
  text-align: center;
}

.bold-hover .a:hover {
  font-style: bolder;
}

.plain-text {
  font-size: 15px !important;
  font-family: 'Roboto', sans-serif !important;
  color: #403E3B !important;
  margin-top: 0px;
}

.plain-text a{
  color: #403E3B !important;
}

.top-nav-large {
  background-color: #FAFAFA;
  border-bottom: 1px solid #e5e1dd;
  padding: 10px;
  margin-top: 35px;
  padding-top: 15px;
}

.top-nav-large li a {
  padding-left: 0px !important;
  padding-right: 30px !important;
  font-family: 'Libre Baskerville', serif;
  font-size: 18px;
  line-height: normal;
  font-weight: bolder;
  color: #474541 !important;
  vertical-align: center;
}

.top-nav-large img {
  margin: 10px;
}

.top-nav-large li.active {
  color: red;
}

.location-tabs {
  margin-bottom: 15px;
  border-bottom: 0px;
}

.vendor-card-name {
  color: #000;
  font-family: 'Libre Baskerville', serif;
  font-weight: bolder;
}

.vendor-card-name:hover {
  color: #000;
}

.like-container {
  padding-left: 10px;
  margin-left: 3px;
  border-left: 1px solid #A7A7A7;
}

.like-button {
  color: #A7A7A7;
}

.like-button-container {
  top: -50px;
  height: 1px;
  text-align: right;
}

.like-button-markets {
  top: -50px;
  text-align: right;
}

.beLocal-btn-default {
  background-color: white !important;
  border-color: #CCCCCC !important;
}

.beLocal-btn-default:hover {
  background-color: #EFEFEF !important;
}

button:focus,
button:hover,
button:active {
  outline: 0px !important;
  -webkit-appearance: none;
}

.like-button:hover {
  color: #979797;
}

.like-button:focus {
  background-color: white !important;
}

.like-button-liked {
  color: #d35b3d !important;
}

textarea {
  resize: vertical;
}

.hours-picker {
  margin-bottom: 5px;
}

.closed-string {
  margin: 0px;
  font-weight: bold;
  padding-top: 10px;
  padding-bottom: 10px;
}

.closed-container {
  text-align: center;
}

.btn-more-details {
  margin-top: 5px;
}

.market-card-text {
  font-size: 12px;
}

html {
  position: relative;
  min-height: 100%;
  /*background-color: #DDDDDD;*/
  background-color: #EEEEEE;
  /*background-image: url('/images/pattern-new.png');*/
}

body {
  /* Margin bottom by footer height */
  margin-bottom: 40px;
  background-color: #EEEEEE;
  /*background-image: url('/images/pattern-new.png');  */
  font-family: 'Roboto', sans-serif !important;
}
/* ... */

